# krypto

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst
examples/: CMakeLists.txt  test_scope_file_descriptor.cpp  test_scope_thread.cpp  test_scope_thread_native_handle.cpp  test_ssl_client.cpp  test_ssl_client_raw.cpp  test_ssl_server.cpp  test_ssl_server_raw.cpp  test_tcp_client.cpp  test_tcp_server.cpp
include/krypto/: common.hpp  context.hpp  context_base.hpp  core.hpp  krpyto.hpp  version.hpp
include/krypto/detail/: acceptor.hpp  basic_handle.hpp  basic_handle_base.hpp  connector.hpp  os.hpp  scope_file_descriptor.hpp  scope_thread.hpp  socket_helper.hpp  ssl_client.hpp  ssl_handle.hpp  ssl_helper.hpp  ssl_server.hpp  tcp_client.hpp  tcp_server.hpp
include/krypto/fmt/: chrono.hpp  fmt.hpp  ostream.hpp
include/krypto/support/: is_basic_handle.hpp  is_char.hpp  void_t.hpp
tests/: test_context.cpp
